--- a/Contacts.Maui/Views/ContactPage.xaml
+++ b/Contacts.Maui/Views/ContactPage.xaml
@@ -3,12 +3,31 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="Contacts.Maui.Views.ContactPage"
              Title="Contact">
-    <VerticalStackLayout>
+
+    <ListView 
+        x:Name="listContacts"
+        BackgroundColor="Transparent"
+        SeparatorColor="Silver"
+        RowHeight="65"
+        ItemSelected="listContacts_ItemSelected"
+        ItemTapped="listContacts_ItemTapped"
+        >
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                <TextCell 
+                    Text="{Binding Name}"
+                    Detail="{Binding Email}"></TextCell>
+            </DataTemplate>
+        </ListView.ItemTemplate>
+
+    </ListView>
+
+    <!--<VerticalStackLayout Spacing="5">
         <Label 
             Text="Welcome to .NET MAUI!"
             VerticalOptions="Center" 
             HorizontalOptions="Center" />
         <Button x:Name="btnEditContact" Clicked="btnEditContact_Clicked" Text="Edit Contact"></Button>
         <Button x:Name="btnNameContact" Clicked="btnNameContact_Clicked" Text="Add Contact"></Button>
-    </VerticalStackLayout>
+    </VerticalStackLayout>-->
 </ContentPage>
